--- a/style.css
+++ b/style.css
@@ -3,35 +3,55 @@
  * File СSS fof description id, classes, and others.
  */
 
-body, 
+body {
+padding: 0;
+margin: 0;
+background: url(img/fon.jpg) no-repeat center top;
+background-attachment: fixed;
+background-size: 100%;
+} 
+a {
+	color: #ff0000;
+}
+span {
+	color: #fff000;
+	font-size: 20px;
+}
 html {
 	padding: 0;
   	margin: 0;
 }
 #content {
-	border: 1px solid blue;
-	margin: 50px auto 5px;
+	background-color: #f8f7e5;
+	border-width:10px;
+	border-style:groove;
+	border-color:gold;
+	margin: 20px auto 5px;
 	width: 500px;
 }
 .comment {
-	border: 1px solid blue;
-	margin: auto;
+	border-width: 10px;
+	border-style: double;
+	border-color: gold;
+	margin: 5px auto;
 	width: 400px;
 }
 .mark1{
-	border-bottom: 1px solid black;
+	border-bottom: 10px groove gold;
 }
 .mark {
 	display: inline
 }
 .login {
-	border: 1px solid blue;
+	border-color:gold;
+	border-style:inset;
+	border-width:5px;
+	float: left; 
 	margin: auto;
 	width: 200px;
-	float: left; 
 }	
 .news {
-	border-bottom: 1px solid black;
+	border-bottom: 10px groove gold;
 	margin: 35px 0;
 	width: 100%;
 }
@@ -61,4 +81,7 @@ textarea {
 	padding: 0;
 	width: 100%;
 }
-
+button {
+	border-size: 2px;
+	border-radius: 4px; 
+}
